--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -2,32 +2,32 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "ReceivedCannabisOrder";
+    ViewData["Title"] = "CannabisOrderEntry";
 }
 
 <div class="text-center">
-    <h2 class="display-4">Received Cannabis Order</h2>
+    <h4 class="display-5">Cannabis Order Entry</h4>
 </div>
 <body>
     <div class="searchDate">
         <label for="dateOrdered" class="Label">Date Ordered:</label>
         <input type="date" id='dateOrdered' class="Date" name="dateOrdered" />
     </div>
-    <div class="searchDate">
-        <label for="deliveryReqDate" class="Label">Delivery Req:</label>
-        <input type="date" id='deliveryReqDate' class="Date" name="deliveryReqDate" />
-    </div>
     <div class="searchDropdown">
         <label for="customerOrderStatus" class="Label">Order Status:</label>
         <select class="form-control dropDownInput" id="customerOrderStatus" name="customerOrderStatus"></select>
     </div>
     <div class="searchDropdown">
-        <label for="customer" class="Label">Customer:</label>
+        <label for="customer" class="Label">Customer Id:</label>
         <select class="form-control dropDownInput" id="customer" name="Customer"></select>
+    </div>
+    <div class="searchDropdown">
+        <label for="supplier" class="Label">Supplier Id:</label>
+        <select class="form-control dropDownInput" id="supplier" name="Supplier"></select>
     </div>
     <div></div>
     <div class="searchDropdown">
-        <label for="carrier" class="Label">Carrier:</label>
+        <label for="carrier" class="Label">Carrier Id:</label>
         <select class="form-control dropDownInput" id="carrier" name="Carrier"></select>
     </div>
     <div class="searchInput">
@@ -38,16 +38,8 @@
         <label class="Label" for="orderNumber">Order #:</label>
         <input type="text" class="input" id="orderNumber" />
     </div>
-    <div class="searchInput">
-        <label class="Label" for="driver">Driver:</label>
-        <input type="text" class="input" id="driver" />
-    </div>
-    <div class="searchInput">
-        <label class="Label" for="dsSlipNumber">DS Slip Number:</label>
-        <input type="text" class="input" id="dsSlipNumber" />
-    </div>
 </body>
-<table id="ReceivedCannabisOrder"></table>
+<table id="CannabisOrderEntry"></table>
 <div id="jqGridPager"></div>
 <fieldset class="scheduler-border">
     <div class="mb-3 row">
@@ -65,8 +57,8 @@
         var header = false;
         var curRowId = -1;
         $(document).ready(function () {
-            $("#ReceivedCannabisOrder").jqGrid({
-                url: 'ReceivedCannabisOrder/GetAll',
+            $("#CannabisOrderEntry").jqGrid({
+                url: 'CannabisOrderEntry/GetAll',
                 mtype: "GET",
                 guiStyle: "bootstrap",
                 iconSet: "fontAwesome",
@@ -90,7 +82,7 @@
                             keys: true,
                             editOptions: {},
                             addOptions: {},
-                            delOptions: { url: 'CustomerOrder/Delete' }
+                            delOptions: { url: 'CannabisOrderEntry/Delete' }
                         }
                     },
                     { label: 'Customer Order Detail Id', name: 'customerOrderDetailID', editable: true, hidden: true, editoptions: { readonly: 'readonly' }, key: true },
@@ -99,20 +91,20 @@
                         label: 'Product Desc', name: 'productDesc', fixed: true, width: 150, editable: true, editrules: { required: true, custom: true, custom_func: IsProduct },
                         editoptions: {
                             dataInit: function (elem) {
-                                curRowId = $('#ReceivedCannabisOrder').getGridParam('selrow');
+                                curRowId = $('#CannabisOrderEntry').getGridParam('selrow');
                                 $(elem).select();
                                 $(elem).autocomplete({
                                     source: getProductName(), autoFocus: true, minLength: 0, select: function (event, ui) {
-                                        $('#ReceivedCannabisOrder').jqGrid('setCell', curRowId, 'productSku', getProductSku(ui.item.value));
+                                        $('#CannabisOrderEntry').jqGrid('setCell', curRowId, 'productSku', getProductSku(ui.item.value));
                                         $('input#productSku').val(getProductSku(ui.item.value));
                                     }
                                 });
                             }
                         }
                     },
-                    { label: 'Product ID(SKU)', name: 'productSku', fixed: true, width: 125, edittype: 'text', editoptions: { readonly: 'readonly' } },
+                    { label: 'Product ID', name: 'productSku', fixed: true, width: 125, edittype: 'text', editoptions: { readonly: 'readonly' } },
                     { label: 'Qty Ordered', name: 'qtyOrdered', fixed: true, width: 100, editable: true, edittype: 'text', editrules: { number: true } },
-                    { label: 'Qty Fulfilled',name: 'qtyFulfilled',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
+                   // { label: 'Qty Fulfilled',name: 'qtyFulfilled',fixed:true,width:100, editable: true,edittype:'text',editrules: {number:true}},
                     { label: 'Notes', name: 'notes', editable: true, fixed: true, width: 450, edittype: 'text' }
 
                 ],
@@ -121,14 +113,14 @@
                 rowHeight: 20,
                 rowNum: 15,
                 pager: "#jqGridPager",
-                editurl: 'ReceivedCannabisOrder/Update',
+                editurl: 'CannabisOrderEntry/Update',
 
             })
 
 
 
 
-            $('#ReceivedCannabisOrder').navGrid('#jqGridPager',
+            $('#CannabisOrderEntry').navGrid('#jqGridPager',
                 // the buttons to appear on the toolbar of the grid
                 { edit: false, add: true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
 
@@ -153,12 +145,10 @@
                         var orderNumber = $("#orderNumber").val();
                         var dateOrdered = $("#dateOrdered").val();
                         var customerOrderStatus = $("#customerOrderStatus").val();
-                        var driver = $("#driver").val();
-                        var dsSlipNumber = $("#dsSlipNumber").val();
-                        var deliveryReqDate = $("#deliveryReqDate").val();
                         var specialInstructions = $("#specialInstructions").val();
                         var carrier = $("#carrier").val();
-                        $.getJSON('ReceivedCannabisOrder/CreateHeader?data=' + customer + '/' + orderNumber + '/' + dateOrdered + '/' + customerOrderStatus + '/' + driver + '/' + dsSlipNumber + '/' + deliveryReqDate + '/' + specialInstructions + '/' + carrier, function () { });
+                        var supplier = $("#supplier").val();
+                        $.getJSON('CannabisOrderEntry/CreateHeader?data=' + customer + '/' + orderNumber + '/' + dateOrdered + '/' + customerOrderStatus +'/' + specialInstructions + '/' + carrier + '/' + supplier, function () { });
                         $.ajaxSetup({ "async": true });
                     },
                     closeAfterAdd: true,
@@ -166,7 +156,7 @@
                     errorTextFormat: function (data) {
                         return 'Error: ' + data.responseText
                     },
-                    url: 'ReceivedCannabisOrder/Add'
+                    url: 'CannabisOrderEntry/Add'
                 });
 
         });
@@ -175,14 +165,14 @@
             $('#deliveryReqDate').val(date());
         });
 
-        $('#ReceivedCannabisOrder').setGridWidth(parseInt($(window).width()) - 20);
+        $('#CannabisOrderEntry').setGridWidth(parseInt($(window).width()) - 20);
         $("#newPage").on('click', function () {
-            window.location.replace("ReceivedCannabisOrder");
+            window.location.replace("CannabisOrderEntry");
         });
         $(document).ready(function () {
             $.ajax({
                 type: "GET",
-                url: "ReceivedCannabisOrder/CreateCustomerList",
+                url: "CannabisOrderEntry/CreateCustomerList",
                 data: "{}",
                 success: function (data) {
                     var s = '';
@@ -196,7 +186,7 @@
         $(document).ready(function () {
             $.ajax({
                 type: "GET",
-                url: "ReceivedCannabisOrder/CreateCarrierList",
+                url: "CannabisOrderEntry/CreateCarrierList",
                 data: "{}",
                 success: function (data) {
                     var s = '';
@@ -210,7 +200,7 @@
         $(document).ready(function () {
             $.ajax({
                 type: "GET",
-                url: "ReceivedCannabisOrder/CreatetCustomerOrderStatusList",
+                url: "CannabisOrderEntry/CreatetCustomerOrderStatusList",
                 data: "{}",
                 success: function (data) {
                     var s = '';
@@ -224,7 +214,21 @@
         $(document).ready(function () {
             $.ajax({
                 type: "GET",
-                url: "ReceivedCannabisOrder/SaCode",
+                url: "CannabisOrderEntry/CreateSupplierList",
+                data: "{}",
+                success: function (data) {
+                    var s = '';
+                    for (var i = 0; i < data.length; i++) {
+                        s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
+                    }
+                    $("#supplier").html(s);
+                }
+            });
+        });
+        $(document).ready(function () {
+            $.ajax({
+                type: "GET",
+                url: "CannabisOrderEntry/SaCode",
                 data: "{}",
                 success: function (data) {
                     if (data != null) {
@@ -233,11 +237,9 @@
                         $('#orderNumber').val(data.orderNumber);
                         $('#dateOrdered').val(data.dateOrdered);
                         $('#customerOrderStatus').val(data.customerOrderStatus);
-                        $('#driver').val(data.driver);
                         $('#carrier').val(data.carrier);
-                        $('#dsSlipNumber').val(data.dsSlipNumber);
-                        $('#deliveryReqDate').val(data.deliveryReqDate);
                         $('#specialInstructions').val(data.specialInstructions);
+                        $('#supplier').val(data.supplier);
                     }
                 }
             });
@@ -254,7 +256,7 @@
         function IsProduct(value, colname) {
             var containsProduct = false;
             $.ajaxSetup({ "async": false });
-            $.getJSON('ReceivedCannabisOrder/CreateProductName', function (data) {
+            $.getJSON('CannabisOrderEntry/CreateProductName', function (data) {
                 if (data != null) {
 
 
@@ -283,7 +285,7 @@
         function getCarrier() {
             var CarrierList = {};
             $.ajaxSetup({ "async": false });
-            $.getJSON('ReceivedCannabisOrder/CreateCarrierList', function (data) {
+            $.getJSON('CannabisOrderEntry/CreateCarrierList', function (data) {
                 if (data != null) {
                     for (var i = 0; i < data.length; i++) {
                         CarrierList[data[i].value] = data[i].text;
@@ -300,7 +302,7 @@
         function getCustomer() {
             var CustomerList = {};
             $.ajaxSetup({ "async": false });
-            $.getJSON('ReceivedCannabisOrder/CreatetCustomerList', function (data) {
+            $.getJSON('CannabisOrderEntry/CreatetCustomerList', function (data) {
                 if (data != null) {
                     for (var i = 0; i < data.length; i++) {
                         CustomerList[data[i].value] = data[i].text;
@@ -317,7 +319,7 @@
         function getCustomerOrderStatus() {
             var CustomerOrderStatusList = {};
             $.ajaxSetup({ "async": false });
-            $.getJSON('ReceivedCannabisOrder/CreatetCustomerOrderStatusList', function (data) {
+            $.getJSON('CannabisOrderEntry/CreatetCustomerOrderStatusList', function (data) {
                 if (data != null) {
                     for (var i = 0; i < data.length; i++) {
                         CustomerOrderStatusList[data[i].value] = data[i].text;
@@ -334,7 +336,7 @@
         function getProductSku(value) {
             var ProductSku = "";
             $.ajaxSetup({ "async": false });
-            $.getJSON('ReceivedCannabisOrder/CreateProductSkuList', function (data) {
+            $.getJSON('CannabisOrderEntry/CreateProductSkuList', function (data) {
                 if (data != null) {
                     for (var i = 0; i < data.length; i++) {
                         if (data[i].value == value) {
@@ -352,7 +354,7 @@
         function getProductName() {
             var ProductNameList = [];
             $.ajaxSetup({ "async": false });
-            $.getJSON('ReceivedCannabisOrder/CreateProductName', function (data) {
+            $.getJSON('CannabisOrderEntry/CreateProductName', function (data) {
                 if (data != null) {
 
 
