--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -66,12 +66,12 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="InvAdjTest" asp-action="Index">Inventory Adjustment Test</a>
                             </div>
                         </li>
-                        <li class="nav-item">
+                       @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
+                        </li>*@
+@*                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AuthView">View Auth Info</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
