--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -14,7 +14,7 @@
         <input type="date" id='dateOrdered' class="Date" name="dateOrdered" />
     </div>
     <div class="searchInput">
-        <label class="Label" for="orderNumber">Order #:</label>
+        <label class="Labelshort" for="orderNumber">Order #:</label>
         <input type="text" class="input" id="orderNumber" />
     </div>
     <div class="searchDropdown">
