--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cannabis</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="CannabisOrderEntry" asp-action="Index">Cannabis Order Entry</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="CannabisCustSumm" asp-action="Index">Cannabis Customer Summary</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="ReceivedCannabisOrder" asp-action="Index">Received order</a>
                             </div>
                         </li>
